--- a/bevy-detective_derive/Cargo.toml
+++ b/bevy-detective_derive/Cargo.toml
@@ -1,14 +1,13 @@
 [package]
-name = "bevy-yarnspinner"
+name = "bevy-detective_derive"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+proc-macro = true
 
 [dependencies]
-bevy = "0.12.0"
-pest = "2.7.5"
-pest_derive = "2.7.5"
-thiserror = "1.0.51"
+syn = "1.0.109"
+quote = "1.0"
 lazy_static = "1.4.0"
-bevy-detective_derive = { path = "bevy-detective_derive" }
