--- a/bevy-detective_derive/Cargo.toml
+++ b/bevy-detective_derive/Cargo.toml
@@ -8,6 +8,6 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
-syn = "1.0.109"
+syn = { version = "1.0.109", features = ["full"] }
 quote = "1.0"
 lazy_static = "1.4.0"
